add qq version 8.2.8